--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,7 +13,54 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QListWidget" name="Services">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>241</width>
+      <height>551</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="Passwords">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>0</y>
+      <width>241</width>
+      <height>551</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="new_entry">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>10</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Neuer Eintrag</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="change_entry">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>10</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Eintrag ändern</string>
+    </property>
+   </widget>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -23,8 +70,46 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuDatei">
+    <property name="title">
+     <string>Datei</string>
+    </property>
+    <addaction name="separator"/>
+    <addaction name="action_ffnen"/>
+    <addaction name="actionSpeichern"/>
+    <addaction name="actionSchliessen"/>
+    <addaction name="actionMaster_Passwort_ndern"/>
+    <addaction name="separator"/>
+    <addaction name="actionCipherNest_schlie_en"/>
+   </widget>
+   <addaction name="menuDatei"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="action_ffnen">
+   <property name="text">
+    <string>Öffnen</string>
+   </property>
+  </action>
+  <action name="actionSpeichern">
+   <property name="text">
+    <string>Speichern</string>
+   </property>
+  </action>
+  <action name="actionSchliessen">
+   <property name="text">
+    <string>Schließen</string>
+   </property>
+  </action>
+  <action name="actionMaster_Passwort_ndern">
+   <property name="text">
+    <string>Master-Passwort aendern</string>
+   </property>
+  </action>
+  <action name="actionCipherNest_schlie_en">
+   <property name="text">
+    <string>CipherNest schließen</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
