--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -91,6 +91,9 @@
     </property>
    </widget>
    <widget class="QLineEdit" name="search_entry">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>500</x>
@@ -104,6 +107,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="search_btn">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>700</x>
