--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -92,7 +92,7 @@
    </widget>
    <widget class="QLineEdit" name="search_entry">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
@@ -108,7 +108,7 @@
    </widget>
    <widget class="QPushButton" name="search_btn">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
